crates/ty_python_semantic/resources/mdtest/snapshots/variables.md_-_Legacy_type_variable…_-_Type_variables_-_Invalid_defaults_-_An_unbounded_default…_(a2759fd9d2731a7d).snap
---
source: crates/ruff_mdtest/src/lib.rs
expression: snapshot
---

---
mdtest name: variables.md - Legacy type variables - Type variables - Invalid defaults - An unbounded default TypeVar has an implicit `object` bound
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/legacy/variables.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing import Generic, TypeVar
2 | 
3 | T1 = TypeVar("T1")
4 | 
5 | # error: [invalid-type-variable-default] "Default `T1` of TypeVar `S` is not assignable to upper bound `int` of `S` because its upper bound `object` is not assignable to `int`"
6 | S = TypeVar("S", default=T1, bound=int)
```

# Diagnostics

```
error[invalid-type-variable-default]: TypeVar default is not assignable to the TypeVar's upper bound
 --> src/mdtest_snippet.py:3:1
  |
3 | T1 = TypeVar("T1")
  | ------------------ `T1` defined here
4 |
5 | # error: [invalid-type-variable-default] "Default `T1` of TypeVar `S` is not assignable to upper bound `int` of `S` because its upper b…
6 | S = TypeVar("S", default=T1, bound=int)
  |                          ^^        --- Upper bound of `S`
  |                          |
  |                          Upper bound `object` of default `T1` is not assignable to upper bound of `S`
  |

```
