crates/ty_python_semantic/resources/mdtest/snapshots/variables.md_-_Legacy_type_variable…_-_Type_variables_-_Invalid_defaults_-_TypeVar_default_with…_(a5426a5650a47aaa).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: variables.md - Legacy type variables - Type variables - Invalid defaults - TypeVar default with a bounded outer
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/legacy/variables.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import Generic, TypeVar
 2 | 
 3 | T1 = TypeVar("T1", bound=int)
 4 | T2 = TypeVar("T2", bound=float)
 5 | T3 = TypeVar("T3", bound=str)
 6 | 
 7 | # OK: `float` in a type expression means `int | float`,
 8 | # and the upper bound of `T` (`int`) is assignable to `int | float`
 9 | S = TypeVar("S", default=T1, bound=float)
10 | 
11 | # error: [invalid-type-variable-default] "Default type `T3` is not assignable to bound `int | float`"
12 | U = TypeVar("U", default=T3, bound=float)
```

# Diagnostics

```
error[invalid-type-variable-default]: Default type `T3` is not assignable to bound `int | float`
  --> src/mdtest_snippet.py:12:26
   |
11 | # error: [invalid-type-variable-default] "Default type `T3` is not assignable to bound `int | float`"
12 | U = TypeVar("U", default=T3, bound=float)
   |                          ^^
   |
  ::: src/mdtest_snippet.py:5:1
   |
 3 | T1 = TypeVar("T1", bound=int)
 4 | T2 = TypeVar("T2", bound=float)
 5 | T3 = TypeVar("T3", bound=str)
   | ----------------------------- `T3` defined here
 6 |
 7 | # OK: `float` in a type expression means `int | float`,
   |
info: `T3` has bound `str` which is not assignable to `int | float`
info: rule `invalid-type-variable-default` is enabled by default

```
