crates/ty_python_semantic/resources/mdtest/snapshots/variables.md_-_Legacy_type_variable…_-_Type_variables_-_Invalid_defaults_-_Unbounded_TypeVar_de…_(8443d3315279bad1).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: variables.md - Legacy type variables - Type variables - Invalid defaults - Unbounded TypeVar default with bounded outer
mdtest path: crates/ty_python_semantic/resources/mdtest/generics/legacy/variables.md
---

# Python source files

## mdtest_snippet.py

```
1 | from typing import Generic, TypeVar
2 | 
3 | T1 = TypeVar("T1")
4 | 
5 | # error: [invalid-type-variable-default] "Default type `T1` is not assignable to bound `int`"
6 | S = TypeVar("S", default=T1, bound=int)
```

# Diagnostics

```
error[invalid-type-variable-default]: Default type `T1` is not assignable to bound `int`
 --> src/mdtest_snippet.py:3:1
  |
1 | from typing import Generic, TypeVar
2 |
3 | T1 = TypeVar("T1")
  | ------------------ `T1` defined here
4 |
5 | # error: [invalid-type-variable-default] "Default type `T1` is not assignable to bound `int`"
6 | S = TypeVar("S", default=T1, bound=int)
  |                          ^^
  |
info: `T1` has bound `object` which is not assignable to `int`
info: rule `invalid-type-variable-default` is enabled by default

```
